<resources>
    <string name="app_name">Utilisateurs</string>
    <string name="create_button">Créer un compte</string>
    <string name="validate_button">Valider</string>
    <string name="second_activity_title">Création du compte</string>
    <string name="name_hint">Pseudo</string>
    <string name="password_hint">Mot de passe</string>
    <string name="mail_hint">Adresse mail</string>
</resources>
